Add tests and fields